# rs-mrz-parser

./: .gitignore  Cargo.toml  README.md
examples/: td1.rs  td2.rs  td3.rs
src/: lib.rs
src/constants/: constants.rs  mod.rs  mrz_field_name.rs  mrz_utils.rs
src/parser/: field_formatter.rs  mod.rs  mrz_field.rs  parser.rs  td1.rs  td2.rs  td3.rs
src/utils/: utils.rs
